objects/Booking_Line__c/Booking_Line__c.object-meta.xml
<CustomObject>
    <label>Booking Line</label>
    <nameField>
        <displayFormat>BKL-{00000}</displayFormat>
        <label>Booking Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>