objects/Booking_Line__c/fields/Amount_of_Tax_Selling_Local__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Tax_Selling_Local__c</fullName>
    <formula>Tax_Rate_Selling__c * Price_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax-Selling for Co-Loader (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>