objects/Booking_Line__c/fields/Amount_Tax_Selling_for_Guest_Local__c.field-meta.xml
<CustomField>
    <fullName>Amount_Tax_Selling_for_Guest_Local__c</fullName>
    <formula>Tax_Rate_Selling__c * PRICE_for_Guest_LOCAL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Tax-Selling for Guest (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>