objects/Booking_Line__c/fields/Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Name</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>Booking Line</relationshipLabel>
    <relationshipName>Booking_Line</relationshipName>
    <type>Lookup</type>
</CustomField>