objects/Booking_Line__c/fields/Currency_Conversion_for_Price__c.field-meta.xml
<CustomField>
    <fullName>Currency_Conversion_for_Price__c</fullName>
    <label>Currency Conversion for Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>