objects/Booking_Line__c/fields/ExchangeRateforGuest__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateforGuest__c</fullName>
    <label>Exchange Rate for Guest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>