objects/Booking_Line__c/fields/LCC_Line__c.field-meta.xml
<CustomField>
    <fullName>LCC_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LCC Line</label>
    <referenceTo>LCCLine__c</referenceTo>
    <relationshipLabel>Booking Line</relationshipLabel>
    <relationshipName>Booking_Line</relationshipName>
    <type>Lookup</type>
</CustomField>