objects/Booking_Line__c/fields/Price_FCY__c.field-meta.xml
<CustomField>
    <fullName>Price_FCY__c</fullName>
    <label>PRICE for Co-Loader (FCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>