objects/Booking_Line__c/fields/PRICE_for_Guest_FCY__c.field-meta.xml
<CustomField>
    <fullName>PRICE_for_Guest_FCY__c</fullName>
    <label>PRICE for Guest (FCY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>