objects/Booking_Line__c/fields/Price_Local__c.field-meta.xml
<CustomField>
    <fullName>Price_Local__c</fullName>
    <label>PRICE for Co-Loader (LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>