objects/Booking_Line__c/fields/Total_Amount_of_Selling_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Selling_FCY__c</fullName>
    <formula>Amount_of_Tax_Selling_FCY__c + Price_FCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Amount for Co-Loader (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>