objects/Booking_Line__c/fields/Total_Amount_of_Selling_Local__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Selling_Local__c</fullName>
    <formula>Amount_of_Tax_Selling_Local__c + Price_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Amount for CoLoader(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>