objects/Booking_Line__c/fields/Total_Selling_Amount_for_Guest_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Amount_for_Guest_FCY__c</fullName>
    <formula>Amount_Tax_Selling_for_Guest_FCY__c + PRICE_for_Guest_FCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Amount for Guest (FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>